# neural_net

./: .gitignore  pyproject.toml
neural_net/deep_learning/: neural_network.py  simple_neural_network.py
neural_networks/deep_learning/: neural_network.py
tests/: test_neural_net.py  test_neural_networks.py
