[tool.poetry]
name = "neural_networks"
version = "0.1.0"
description = ""
authors = ["vikasz-skillate <Vikas Z <vikas.zingade@skillate.com>>"]

[tool.poetry.dependencies]
python = "^3.8"
environs = "^9.3.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
